--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بحبك يا سارة</title>
+    <title>بحبك يا سارة ❤️</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>بحبك يا سارة ❤️</h1>
-        <p>عيد حب سعيد!</p>
-        <div class="hearts"></div>
+        <h1 class="glow">بحبك يا سارة ❤️</h1>
+        <p class="fade-in">عيد حب سعيد!</p>
+        <button id="heart-btn">💖 انقر ليزيد الحب 💖</button>
     </div>
+    <div id="hearts-container"></div>
 </body>
 </html>
