--- a/index.html
+++ b/index.html
@@ -6,52 +6,65 @@
   <title>بحبك يا سارة ❤️</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
-
     /* Reset and base styles */
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
-    body {
-      font-family: 'Cairo', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+    html, body {
+      height: 100%;
       overflow: hidden;
-      background: linear-gradient(45deg, #ff416c, #ff4b2b, #ff9a9e, #fad0c4);
+      font-family: 'Cairo', sans-serif;
+      background: #000; /* fallback for canvas background */
+    }
+    /* Canvas for particle effects */
+    #canvas-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+    /* Animated gradient overlay */
+    body::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(45deg, rgba(255,65,108,0.3), rgba(255,75,43,0.3), rgba(255,154,158,0.3), rgba(250,208,196,0.3));
       background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
+      animation: gradientBG 20s ease infinite;
+      z-index: 2;
     }
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
-    /* Container for text and button */
+    /* Main content container */
     .container {
-      z-index: 10;
+      position: relative;
+      z-index: 3;
       text-align: center;
-      padding: 20px 40px;
-      background: rgba(0, 0, 0, 0.3);
+      padding: 40px;
       border-radius: 20px;
-      backdrop-filter: blur(10px);
-      animation: slideIn 1s ease-out;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(15px);
+      max-width: 600px;
+      margin: auto;
+      transform: perspective(800px) rotateX(0deg) rotateY(0deg);
+      transition: transform 0.3s ease;
     }
-    @keyframes slideIn {
-      from { transform: translateY(-50px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    /* Heading and paragraph animations */
+    /* Title and text */
     h1 {
       font-size: 4rem;
-      margin-bottom: 20px;
       color: #fff;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-      animation: glow 2s ease-in-out infinite alternate;
+      margin-bottom: 20px;
+      animation: glow 3s ease-in-out infinite alternate;
     }
     @keyframes glow {
       from { text-shadow: 0 0 10px #fff; }
@@ -59,8 +72,8 @@
     }
     p {
       font-size: 1.8rem;
-      margin-bottom: 30px;
       color: #fff;
+      margin-bottom: 30px;
       opacity: 0;
       animation: fadeIn 2s forwards;
       animation-delay: 1s;
@@ -69,7 +82,6 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     /* Button styling */
     button {
       background: #ff4b2b;
@@ -80,13 +92,12 @@
       cursor: pointer;
       border-radius: 50px;
       transition: transform 0.3s, background 0.3s;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
     button:hover {
       background: #ff2e63;
       transform: scale(1.1);
     }
-
     /* Floating hearts container */
     #hearts-container {
       position: absolute;
@@ -95,69 +106,162 @@
       width: 100%;
       height: 100%;
       pointer-events: none;
-      overflow: hidden;
-      z-index: 5;
+      z-index: 4;
     }
     .heart {
       position: absolute;
-      color: #ffcccb;
       font-size: 2rem;
       opacity: 0.9;
-      animation: floatHeart 4s linear forwards;
+      animation: floatHeart linear forwards;
     }
     @keyframes floatHeart {
       0% {
         transform: translateY(100vh) scale(0.5) rotate(0deg);
         opacity: 0;
       }
-      50% {
+      25% { opacity: 1; }
+      100% {
+        transform: translateY(-10vh) scale(1) rotate(720deg);
+        opacity: 0;
+      }
+    }
+    /* Confetti effect */
+    .confetti {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: currentColor;
+      opacity: 0.8;
+      animation: confettiFall linear forwards;
+    }
+    @keyframes confettiFall {
+      0% {
+        transform: translateY(-20px) rotate(0deg);
         opacity: 1;
       }
       100% {
-        transform: translateY(-10vh) scale(1) rotate(360deg);
+        transform: translateY(100vh) rotate(360deg);
         opacity: 0;
       }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="glow">بحبك يا سارة ❤️</h1>
-    <p class="fade-in">عيد حب سعيد!</p>
+  <!-- Canvas for dynamic particle background -->
+  <canvas id="canvas-bg"></canvas>
+
+  <!-- Main content container -->
+  <div class="container" id="content">
+    <h1>بحبك يا سارة ❤️</h1>
+    <p>عيد حب سعيد!</p>
     <button id="heart-btn">💖 انقر ليزيد الحب 💖</button>
   </div>
+
+  <!-- Container for floating hearts -->
   <div id="hearts-container"></div>
+
   <script>
-    // Utility to generate random numbers in a range
+    /* Advanced Particle Background using Canvas */
+    const canvas = document.getElementById('canvas-bg');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    const particles = [];
+    const particleCount = 100;
+
+    class Particle {
+      constructor() {
+        this.reset();
+      }
+      reset() {
+        this.x = Math.random() * canvas.width;
+        this.y = Math.random() * canvas.height;
+        this.radius = Math.random() * 2 + 1;
+        this.speedX = Math.random() * 0.5 - 0.25;
+        this.speedY = Math.random() * 0.5 - 0.25;
+        this.alpha = Math.random() * 0.5 + 0.3;
+      }
+      update() {
+        this.x += this.speedX;
+        this.y += this.speedY;
+        if (this.x < 0 || this.x > canvas.width || this.y < 0 || this.y > canvas.height) {
+          this.reset();
+        }
+      }
+      draw() {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+        ctx.fillStyle = 'rgba(255, 255, 255, ' + this.alpha + ')';
+        ctx.fill();
+      }
+    }
+    for (let i = 0; i < particleCount; i++) {
+      particles.push(new Particle());
+    }
+    function animateParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let p of particles) {
+        p.update();
+        p.draw();
+      }
+      requestAnimationFrame(animateParticles);
+    }
+    animateParticles();
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+
+    /* Interactive tilt effect on the content container */
+    const container = document.getElementById('content');
+    document.addEventListener('mousemove', (e) => {
+      const xAxis = (window.innerWidth / 2 - e.clientX) / 20;
+      const yAxis = (window.innerHeight / 2 - e.clientY) / 20;
+      container.style.transform = `perspective(800px) rotateY(${xAxis}deg) rotateX(${yAxis}deg)`;
+    });
+
+    /* Floating hearts effect */
     function random(min, max) {
       return Math.random() * (max - min) + min;
     }
-
-    // Function to create and animate a heart element
     function createHeart() {
       const heart = document.createElement('div');
       heart.classList.add('heart');
       heart.innerHTML = '💖';
-      heart.style.left = random(0, 100) + 'vw'; // Random horizontal start
-      const duration = random(3, 6); // Random duration between 3 and 6 seconds
+      heart.style.left = random(0, 100) + 'vw';
+      const duration = random(4, 8);
       heart.style.animationDuration = duration + 's';
       heart.style.animationDelay = random(0, 2) + 's';
       document.getElementById('hearts-container').appendChild(heart);
-      // Remove heart after animation to clean up the DOM
       setTimeout(() => {
         heart.remove();
       }, duration * 1000);
     }
-
-    // Add hearts on button click
     document.getElementById('heart-btn').addEventListener('click', () => {
-      for (let i = 0; i < 10; i++) {
+      // On click, generate multiple hearts and confetti pieces
+      for (let i = 0; i < 15; i++) {
         createHeart();
+        createConfetti();
       }
     });
-
-    // Continuously create hearts in the background
     setInterval(createHeart, 500);
+
+    /* Confetti effect on click */
+    function createConfetti() {
+      const confetti = document.createElement('div');
+      confetti.classList.add('confetti');
+      confetti.style.left = random(0, 100) + 'vw';
+      confetti.style.background = `hsl(${random(0, 360)}, 80%, 60%)`;
+      const size = random(5, 10);
+      confetti.style.width = size + 'px';
+      confetti.style.height = size + 'px';
+      const duration = random(3, 5);
+      confetti.style.animationDuration = duration + 's';
+      document.body.appendChild(confetti);
+      setTimeout(() => {
+        confetti.remove();
+      }, duration * 1000);
+    }
   </script>
 </body>
 </html>
