--- a/index.html
+++ b/index.html
@@ -12,36 +12,24 @@
             text-align: center;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
         }
         h1 {
             font-size: 3rem;
             margin-top: 50px;
-            animation: fadeIn 2s;
+            opacity: 0;
         }
         .poem {
             font-size: 1.5rem;
             margin: 20px;
-            animation: typing 4s steps(40, end);
-            white-space: nowrap;
-            overflow: hidden;
-        }
-        @keyframes typing {
-            from { width: 0; }
-            to { width: 100%; }
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+            opacity: 0;
         }
         img {
             width: 200px;
             border-radius: 50%;
             border: 5px solid #556B2F;
-            animation: bounce 2s infinite;
-        }
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
+            margin-top: 20px;
+            opacity: 0;
         }
         button {
             background-color: #556B2F;
@@ -50,22 +38,51 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            animation: pulse 1.5s infinite;
+            margin: 10px;
+            opacity: 0;
         }
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
+        .reactions {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .reaction-btn {
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        .reaction-btn:hover {
+            transform: scale(1.2);
         }
     </style>
 </head>
 <body>
-    <h1>صديقي العزيز، أنت نور حياتي</h1>
-    <img src="صورة_صديقك.jpg" alt="صديقي">
-    <div class="poem">
+    <h1 id="title">صديقي العزيز، أنت كنزي الثمين</h1>
+    <img id="friend-img" src="صورة_صديقك.jpg" alt="صديقي">
+    <div id="poem" class="poem">
         الصداقة بحرٌ لا ساحلَ لهُ<br>
         والإخوة نورٌ في ظلام الدجى
     </div>
-    <button onclick="alert('رسالة حب لصديقي!')">أرسل رسالة</button>
+    <button id="message-btn">أرسل رسالة</button>
+    <div class="reactions">
+        <div class="reaction-btn" onclick="react('❤️')">❤️</div>
+        <div class="reaction-btn" onclick="react('😂')">😂</div>
+        <div class="reaction-btn" onclick="react('🤗')">🤗</div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script>
+        // GSAP Animations
+        gsap.from("#title", { duration: 2, opacity: 0, y: -50, ease: "power2.out" });
+        gsap.from("#friend-img", { duration: 2, opacity: 0, scale: 0.5, rotation: 360, ease: "elastic.out(1, 0.3)", delay: 1 });
+        gsap.from("#poem", { duration: 3, opacity: 0, x: -100, ease: "power2.out", delay: 2 });
+        gsap.from("#message-btn", { duration: 2, opacity: 0, y: 50, ease: "bounce.out", delay: 3 });
+
+        // Reaction Function
+        function react(emoji) {
+            alert(`تفاعلت بـ ${emoji} مع صديقك!`);
+        }
+    </script>
 </body>
 </html>
