--- a/index.html
+++ b/index.html
@@ -1,132 +1,315 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nour Hakam's Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nour Hakam - Portfolio</title>
+  <style>
+    /* Reset & Global Styles */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0a192f;
+      color: #ccd6f6;
+      line-height: 1.6;
+      scroll-behavior: smooth;
+    }
+
+    /* Header & Navigation */
+    header {
+      position: sticky;
+      top: 0;
+      background-color: #112240;
+      padding: 10px 20px;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+    }
+    .logo img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      border: 2px solid #64ffda;
+      margin-right: 10px;
+      transition: transform 0.3s ease;
+    }
+    .logo img:hover { transform: scale(1.1); }
+    .logo h1 { font-size: 1.5em; color: #64ffda; }
+    nav ul {
+      list-style: none;
+      display: flex;
+    }
+    nav ul li { margin-left: 20px; }
+    nav ul li a {
+      text-decoration: none;
+      color: #ccd6f6;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+    nav ul li a:hover { color: #64ffda; }
+
+    /* Sections */
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 1s ease;
+    }
+    section.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    section h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #64ffda;
+      display: inline-block;
+      padding-bottom: 5px;
+    }
+    section p, section li { font-size: 1em; margin-bottom: 10px; }
+
+    /* Hero Section */
+    .hero {
+      text-align: center;
+      padding: 100px 20px;
+    }
+    .hero img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 3px solid #64ffda;
+      transition: transform 0.3s ease;
+    }
+    .hero img:hover { transform: scale(1.1); }
+    .hero h1 { margin: 20px 0 10px; font-size: 2.5em; color: #64ffda; }
+    .hero p { font-size: 1.2em; }
+
+    /* Skills Section */
+    .skill {
+      margin-bottom: 20px;
+    }
+    .skill .skill-name {
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+    .progress {
+      background: #0a192f;
+      border: 1px solid #1f2a48;
+      border-radius: 5px;
+      overflow: hidden;
+      height: 25px;
+    }
+    .progress-bar {
+      height: 100%;
+      background-color: #64ffda;
+      width: 0;
+      line-height: 25px;
+      color: #0a192f;
+      text-align: right;
+      padding-right: 10px;
+      transition: width 2s ease;
+    }
+
+    /* List Containers for Certifications, Languages, Experience & Projects */
+    .list-container ul { list-style: none; }
+    .list-container ul li {
+      padding: 10px 0;
+      border-bottom: 1px solid #1f2a48;
+    }
+
+    /* Footer */
+    footer {
+      background: #112240;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    footer p { margin: 5px 0; }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      nav ul { flex-direction: column; }
+      nav ul li { margin: 10px 0; }
+    }
+  </style>
 </head>
 <body>
+  <!-- Header & Navigation -->
   <header>
-    <div class="container">
-      <div class="logo">
-        <img src="profile.jpg" alt="Nour Hakam" class="profile-img">
-        <h1>Nour Hakam</h1>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#certifications">Certifications</a></li>
-          <li><a href="#languages">Languages</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-        </ul>
-      </nav>
+    <div class="logo">
+      <img src="profile.jpg" alt="Profile Picture" />
+      <h1>Nour Hakam</h1>
     </div>
+    <nav>
+      <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#certifications">Certifications</a></li>
+        <li><a href="#languages">Languages</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </nav>
   </header>
 
+  <!-- Main Content -->
   <main>
+    <!-- Hero Section -->
+    <section id="hero" class="active">
+      <div class="hero">
+        <img src="profile.jpg" alt="Profile Picture" />
+        <h1>Nour Hakam</h1>
+        <p>Cybersecurity &amp; Networking Enthusiast | Aspiring Developer</p>
+      </div>
+    </section>
+
     <!-- About Section -->
-    <section id="about" class="card fade-in">
+    <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm a 20-year-old cybersecurity and networking enthusiast with a solid background in IT and programming.
-        Leader in Scout Company since 2019.
+        I'm a 20-year-old IT enthusiast passionate about cybersecurity, networking, and programming. I have hands-on experience from internships and projects, and I've been a leader in my Scout Company since 2019.
       </p>
     </section>
 
-    <!-- Skills Section -->
-    <section id="skills" class="card fade-in">
+    <!-- Skills Section with Animated Progress Bars -->
+    <section id="skills">
       <h2>Skills</h2>
       <div class="skill">
-        <span>OOP</span>
+        <div class="skill-name">OOP (70%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 70%;">70%</div>
+          <div class="progress-bar" data-percentage="70">70%</div>
         </div>
       </div>
       <div class="skill">
-        <span>Data Structures</span>
+        <div class="skill-name">Data Structures (50%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 50%;">50%</div>
+          <div class="progress-bar" data-percentage="50">50%</div>
         </div>
       </div>
       <div class="skill">
-        <span>Database</span>
+        <div class="skill-name">Database (60%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 60%;">60%</div>
+          <div class="progress-bar" data-percentage="60">60%</div>
         </div>
       </div>
       <div class="skill">
-        <span>Java</span>
+        <div class="skill-name">Java (40%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 40%;">40%</div>
+          <div class="progress-bar" data-percentage="40">40%</div>
         </div>
       </div>
       <div class="skill">
-        <span>Python</span>
+        <div class="skill-name">Python (30%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 30%;">30%</div>
+          <div class="progress-bar" data-percentage="30">30%</div>
         </div>
       </div>
       <div class="skill">
-        <span>C++</span>
+        <div class="skill-name">C++ (10%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 10%;">10%</div>
+          <div class="progress-bar" data-percentage="10">10%</div>
         </div>
       </div>
       <div class="skill">
-        <span>Networking</span>
+        <div class="skill-name">Networking (20%)</div>
         <div class="progress">
-          <div class="progress-bar" style="--target-width: 20%;">20%</div>
+          <div class="progress-bar" data-percentage="20">20%</div>
         </div>
       </div>
     </section>
 
-    <!-- Certifications Section -->
-    <section id="certifications" class="card fade-in">
+    <!-- Certifications & Courses -->
+    <section id="certifications">
       <h2>Certifications &amp; Courses</h2>
-      <ul>
-        <li>Ethical Hacking 101: <span class="status in-progress">In Progress</span></li>
-        <li>IC3 Course: <span class="status completed">Completed</span></li>
-        <li>Automation: <span class="status in-progress">In Progress</span></li>
-        <li>Data Science: <span class="status planned">Planned Soon</span></li>
-      </ul>
+      <div class="list-container">
+        <ul>
+          <li>Ethical Hacking 101: <span style="color: orange;">In Progress</span></li>
+          <li>IC3 Course: <span style="color: limegreen;">Completed</span></li>
+          <li>Automation: <span style="color: orange;">In Progress</span></li>
+          <li>Data Science: <span style="color: tomato;">Planned Soon</span></li>
+        </ul>
+      </div>
     </section>
 
-    <!-- Languages Section -->
-    <section id="languages" class="card fade-in">
+    <!-- Languages -->
+    <section id="languages">
       <h2>Languages</h2>
-      <ul>
-        <li>Arabic: Primary</li>
-        <li>English: B1</li>
-        <li>French: Little</li>
-      </ul>
+      <div class="list-container">
+        <ul>
+          <li>Arabic: Primary</li>
+          <li>English: B1</li>
+          <li>French: Little</li>
+        </ul>
+      </div>
     </section>
 
-    <!-- Experience Section -->
-    <section id="experience" class="card fade-in">
+    <!-- Experience -->
+    <section id="experience">
       <h2>Experience</h2>
-      <ul>
-        <li>Internship at Hoz Mall IT Department</li>
-        <li>Data Entry at a Petrol Station</li>
-      </ul>
+      <div class="list-container">
+        <ul>
+          <li>Internship at Hoz Mall IT Department</li>
+          <li>Data Entry at a Petrol Station</li>
+        </ul>
+      </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="card fade-in">
+    <!-- Projects -->
+    <section id="projects">
       <h2>Projects</h2>
-      <ul>
-        <li>Small project for a Petrol Station</li>
-        <li>Face Attendance System</li>
-        <li>Website for Blood Donation</li>
-      </ul>
+      <div class="list-container">
+        <ul>
+          <li>Small Project for a Petrol Station</li>
+          <li>Face Attendance System</li>
+          <li>Website for Blood Donation</li>
+        </ul>
+      </div>
     </section>
   </main>
 
-  <footer class="fade-in">
+  <!-- Footer -->
+  <footer>
     <p>&copy; 2025 Nour Hakam. All Rights Reserved.</p>
     <p>Contact: nour.hakam@example.com</p>
   </footer>
+
+  <!-- JavaScript for Animations -->
+  <script>
+    // Animate progress bars by setting width from data attribute
+    function animateProgressBars() {
+      const bars = document.querySelectorAll('.progress-bar');
+      bars.forEach(bar => {
+        const percentage = bar.getAttribute('data-percentage');
+        bar.style.width = percentage + '%';
+      });
+    }
+
+    // Intersection Observer for section reveal animations
+    const sections = document.querySelectorAll('section');
+    const observerOptions = { threshold: 0.2 };
+
+    const observer = new IntersectionObserver((entries, observer) => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting) {
+          entry.target.classList.add('active');
+          if(entry.target.id === 'skills') {
+            animateProgressBars();
+          }
+          observer.unobserve(entry.target);
+        }
+      });
+    }, observerOptions);
+
+    sections.forEach(section => observer.observe(section));
+  </script>
 </body>
 </html>
