--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
     .hero h1 { margin: 20px 0 10px; font-size: 2.5em; color: #64ffda; }
     .hero p { font-size: 1.2em; }
     
+    /* About Section Update */
+    /* Now includes "I use Python for personal tasks and automation." */
     /* Skills Section */
     .skill {
       margin-bottom: 20px;
@@ -197,6 +199,7 @@
       <h2>About Me</h2>
       <p>
         I'm a 20-year-old IT enthusiast passionate about cybersecurity, networking, and programming.
+        I use Python for personal tasks and automation.
         With hands-on experience from internships and projects, I strive for continuous learning and improvement.
       </p>
     </section>
@@ -257,6 +260,7 @@
           <li>IC3 Course: <span style="color: limegreen;">Completed</span></li>
           <li>Automation: <span style="color: orange;">In Progress</span></li>
           <li>Data Science: <span style="color: tomato;">Planned Soon</span></li>
+          <li>Data Mining: <span style="color: limegreen;">Completed</span></li>
         </ul>
       </div>
     </section>
@@ -292,6 +296,7 @@
           <li>Small Project for a Petrol Station</li>
           <li>Face Attendance System</li>
           <li>Website for Blood Donation</li>
+          <li>Senior Project: <span style="color: orange;">In Progress</span></li>
         </ul>
       </div>
     </section>
